# where-toy

./: .gitignore  CHANGES.txt  README.md  makefile  pyproject.toml  setup.cfg  tasks.py  tox.ini
examples/: where-module.ipynb
extras/: legacy-stuff.ipynb  make-zipfile.ipynb  pkgutil-get-data.ipynb  resources-files.ipynb  util-find-spec.ipynb  where-test.ipynb  where-where.ipynb  where-zipfile.ipynb
src/: where.py
src/where/: __init__.py  __main__.py  dirtree.py  utils.py
tests/: test_where.py
