[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "where-toy"
version = "0.0.6"
requires-python = ">=3.7"
description = "Utility to locate python modules from the command line"
keywords = ["utility", "command-line"]
authors = [ {"name" = "furechan", "email" = "furechan@xsmail.com"} ]
urls = { "homepage" = "https://github.com/furechan/where-toy" }
readme = "README.md"
license = { text = "MIT License" }
classifiers = [
    "Topic :: Utilities",
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]

[project.optional-dependencies]
dev = [ "pytest", "invoke", "build", "twine" ]

[tool.hatch.build]
only-packages = true
sources = ["src"]

