[metadata]
# Add license_files = ... to includes non standard license file(s) in the wheel
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://packaging.python.org/en/latest/guides/using-manifest-in
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
# https://pypi.org/classifiers/


name = where-toy
version = 0.0.1
description = Utility to locate python modules from the command line
long_description = file: README.md
long_description_content_type= text/markdown
keywords = utility
author = furechan
license = MIT License
url = https://github.com/furechan/where-toy

classifiers =
    Topic :: Utilities
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
py_modules = where
include_package_data = True
package_dir= =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src

