[metadata]
name = where-toy
version = attr: where.__version__
description = Utility to locate python modules from the command line
long_description = file: README.md
long_description_content_type= text/markdown
keywords = utility
author = furechan
license = MIT License
url = https://github.com/furechan/where-toy

classifiers =
    Topic :: Utilities
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
py_modules = where
include_package_data = True
package_dir= =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where=src

